# I3D-Exporter-Additionals

./: .gitignore  .releaserc.yaml  README.md  __init__.py  helper_functions.py  i3d_exporter_type.py  new_ui.py  prepare_release.sh  properties.py  pyproject.toml  ui.py
.github/workflows/: release.yml  test-release.yml
i3d_exporter_additionals/: __init__.py  blender_manifest.toml  helper_functions.py  properties.py  ui.py
i3d_exporter_additionals/skeleton/: skeleton_config.py
i3d_exporter_additionals/tools/: align_hydraulic_pair.py  assets_importer.py  generate_empty_on_curves.py  material_tools.py  mesh_tools.py  orientation_tools.py  properties_converter.py  skeletons.py  track_tools.py  user_attributes.py  verifier.py
i3d_exporter_additionals/tools/giants_to_i3dio/: __init__.py  dispatcher.py  logging_config.py  mappings.py  material_conversion.py  object_conversion.py  operator.py  property_handlers.py
tools/: assets_importer.py  freeze_tools.py  generate_empty_on_curves.py  material_tools.py  mesh_tools.py  orientation_tools.py  properties_converter.py  skeletons.py  track_tools.py  user_attributes.py  uv_tools.py  verifier.py
