[project]
name = "i3d_material_visualizer"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = [
  "N801",  # Blender-style class names (e.g., SOMETHING_OT_Something) violate CapWords
]
# Scope Blender reload/import side-effect patterns:
[tool.ruff.lint.per-file-ignores]
"i3d_material_visualizer/__init__.py" = ["E402", "F401"]  # import not at top; imported for side effects

[tool.ruff.lint.isort]
order-by-type = true
